# redundant-phi

./: CMakeLists.txt  SimpleConstProp.cpp  build.sh  mem2reg.ll  out.ll  out_ssa.ll  readme.md  test.c  test.ll
